# OrderBook

./: .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  docker-compose.yml  start-docker.sh  test_agents.sh
agents/: .dockerignore  Dockerfile  README.md  REFACTORING_SUMMARY.md  __init__.py  agent_base.py  agent_entrypoint.sh  agent_runner.py  config.py  langraph_agent.py  requirements.txt  run_agents.py  test_agents.py
agents/config/: agent_config.yaml
agents/strategies/: README.md  __init__.py  base_strategy.py  heuristic_strategy.py  ml_strategy.py  personality_strategy.py
benchmarks/: .gitignore  CMakeLists.txt  DOCKER.md  Dockerfile  README.md  SUMMARY.md  docker-compose.override.yml.example  docker-run.bat  docker-run.sh  run_benchmarks.sh  run_benchmarks_docker.sh
benchmarks/cpp/: benchmark_load.cpp  benchmark_matching.cpp  benchmark_oms.cpp  benchmark_orderbook.cpp  benchmark_queue.cpp
benchmarks/python_benchmarks/: __init__.py  benchmark_tcp_client.py  benchmark_websocket.py  requirements.txt
dashboard/: .dockerignore  Dockerfile  README.md  requirements.txt  server.py  test_ws.py
dashboard/static/: index.html  index.html.backup
dashboard/static/js/: app.js
docs/: API_CONTRACT.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_FLOW.md  DOCKER_QUICKSTART.md  DOCKER_SEPARATE.md  DOCKER_SETUP.md  DOCUMENTATION_INDEX.md  IMPLEMENTATION_STATUS.md  INTERVIEW_GUIDE.md  PERFORMANCE.md  PROJECT_STRUCTURE.md  RUNNING_SERVICES.md  SPSC_QUEUE_ANALYSIS.md  TROUBLESHOOTING.md
include/orderbook/core/: constants.hpp  log.hpp
include/orderbook/engine/: i_matching_engine.hpp  matching_engine.hpp
include/orderbook/events/: event_publisher.hpp  event_types.hpp
include/orderbook/handlers/: input_handler.hpp
include/orderbook/oms/: order_management_system.hpp
include/orderbook/processors/: order_processor.hpp
include/orderbook/queue/: spsc_queue.hpp
interview_version/: README.md  main.cpp  orderbook.cpp  orderbook.h
orderbook/: .dockerignore  CMakeLists.txt  Dockerfile  README.md
orderbook/apps/: ob_cli.cpp  ob_server.cpp
orderbook/docker/: supervisord.conf
orderbook/include/orderbook/book/: i_order_book.hpp  order_book.hpp
orderbook/include/orderbook/core/: instrument.hpp  log.hpp  types.hpp
orderbook/include/orderbook/engine/: matching_engine.hpp
orderbook/include/orderbook/handlers/: output_handler.hpp
orderbook/include/orderbook/oms/: i_order_book_service.hpp  instrument_manager.hpp
orderbook/src/orderbook/book/: order_book.cpp
orderbook/src/orderbook/engine/: matching_engine.cpp
orderbook/src/orderbook/oms/: instrument_manager.cpp
orderbook/src/orderbook/processors/: order_processor.cpp
orderbook/websocket_server/: broadcast.py  message_models.py  requirements.txt  server.py  settings.py  state.py
orderbook/websocket_server/models/: __init__.py  agent.py  instrument.py  news.py  trade.py
orderbook/websocket_server/routers/: __init__.py  agents.py  instruments.py  news.py  performance.py
orderbook/websocket_server/services/: __init__.py  agent_manager.py  instrument_service.py  market_maker_service.py  news_service.py  orderbook_client.py  portfolio_tracker.py
src/orderbook/book/: order_book.cpp
src/orderbook/engine/: matching_engine.cpp
src/orderbook/oms/: order_management_system.cpp
